--- a/view/locale-switch/helper/locale-switch.phtml
+++ b/view/locale-switch/helper/locale-switch.phtml
@@ -4,7 +4,7 @@
             <?php if ($locale === $currentLocale): ?>
                 <li class="active"><span><?php echo htmlspecialchars($description); ?></span></li>
             <?php else: ?>
-                <li><a href="<?php echo $this->url('site/set-locale', [], ['query' => ['locale' => $locale, 'redirect_uri' => $_SERVER['REQUEST_URI']]], true); ?>"><?php echo htmlspecialchars($description); ?></a></li>
+                <li><a href="<?php echo $this->url('site/set-locale', [], ['query' => ['locale' => $locale, 'redirect_url' => $_SERVER['REQUEST_URI']]], true); ?>"><?php echo htmlspecialchars($description); ?></a></li>
             <?php endif; ?>
         <?php endforeach; ?>
     </ul>
